Bug 105753 - Logitech wireless touchpad hesitates or stops on Ubuntu
Summary: Logitech wireless touchpad hesitates or stops on Ubuntu
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-26 15:35 UTC by yahoe.001
Modified: 2018-05-31 18:40 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Test result 1 (235.63 KB, image/png)
2018-04-09 03:05 UTC, yahoe.001
Details
Test result 2 (248.11 KB, image/png)
2018-04-09 03:06 UTC, yahoe.001
Details
0001-util-allow-for-palm-pressure-255.patch (882 bytes, patch)
2018-04-30 00:42 UTC, Peter Hutterer
Details | Splinter Review
99-logitech-wireless-touchpad-palm.hwdb (546 bytes, text/plain)
2018-04-30 11:54 UTC, stacktracer
Details
0001-fix-spurious-palm-detections-for-Logitech-Wireless-T.patch (1.15 KB, text/plain)
2018-05-01 15:16 UTC, stacktracer
Details

Description yahoe.001 2018-03-26 15:35:54 UTC
Under Ubuntu 18.04, for about a month now, my Logitech Wirelees Touchpad’s pointer is very hesitant and just stops most of the time. It will only starts moving again after clicking buttons a couple times and will work for a second or two and just cannot be used.
I have a similar problem running Bionic latest Live USB.
The hardware is not at cause here since it works perfectly under Ubuntu 17.10 on the same system.
I believe this behaviour started with libinput 1.10.0-1, but updating to libinput 1.10.3-2 does not fix the issue.
Installing xserver-xorg-input-synaptics takes care of the problem though this very package shouldn’t have to be installed.
Comment 1 Daniel van Vugt 2018-03-27 02:19:33 UTC
Sounds like another pressure/size issue, like we saw with Apple Magic Trackpad.
Comment 2 yahoe.001 2018-03-28 03:08:43 UTC
(In reply to Daniel van Vugt from comment #1)
> Sounds like another pressure/size issue, like we saw with Apple Magic
> Trackpad.

Is there any tests I could run to help you track the source of the problem?
Comment 3 Daniel van Vugt 2018-03-28 03:18:14 UTC
Maybe try:

  sudo libinput measure touch-size
  sudo libinput measure touchpad-pressure

(probably only one of those commands will work)

Also check if this improves things:

  sudo libinput measure touch-size --touch-thresholds 2:1
Comment 4 yahoe.001 2018-04-02 14:48:14 UTC
(In reply to Daniel van Vugt from comment #3)
> Maybe try:
> 
>   sudo libinput measure touch-size
>   sudo libinput measure touchpad-pressure
> 
> (probably only one of those commands will work)
> 
> Also check if this improves things:
> 
>   sudo libinput measure touch-size --touch-thresholds 2:1

sudo libinput measure touch-size
returns
Using Logitech Wireless Touchpad: /dev/input/event19
Error: device does not have ABS_MT_TOUCH_MAJOR
Comment 5 Peter Hutterer 2018-04-02 23:30:09 UTC
the wireless touchpad doesn't have touch sizes but iirc it does have touch pressure. Please try that command instead
Comment 6 yahoe.001 2018-04-04 04:00:39 UTC
(In reply to Peter Hutterer from comment #5)
> the wireless touchpad doesn't have touch sizes but iirc it does have touch
> pressure. Please try that command instead

I do not know if the command ’sudo libinput measure touchpad-pressure’ was suppose set some parameters, but this Logitech Wireless Touchpad is still unusable. As always, reinstalling xserver-xorg-input-synaptics fixes the issue.
Comment 7 Daniel van Vugt 2018-04-04 04:43:58 UTC
That command is intended to print out parameters, and should show when it thinks you're pressing hard enough for a tap to register.

It would be interesting for you to use it for a little while and paste the output here:

  sudo libinput measure touchpad-pressure

Please also try reducing the thresholds to see if that makes its output more sensible:

  sudo libinput measure touchpad-pressure --touch-thresholds 2:1

This is a fact-finding exercise. If you find the default thresholds are wrong then we can change them and the bug would be fixed.
Comment 8 yahoe.001 2018-04-09 03:05:23 UTC
Created attachment 138689 [details]
Test result 1
Comment 9 yahoe.001 2018-04-09 03:06:10 UTC
Created attachment 138690 [details]
Test result 2
Comment 10 Daniel van Vugt 2018-04-09 03:09:25 UTC
Thanks. It looks like the hesitation (when the cursor stops) is when libinput is mistaking your finger for a palm.
Comment 11 Peter Hutterer 2018-04-09 04:39:42 UTC
https://wayland.freedesktop.org/libinput/doc/latest/touchpad_pressure.html#touchpad_pressure_hwdb

has the information on what to do next
Comment 12 yahoe.001 2018-04-12 14:07:25 UTC
The problem is still present with libinput10 1.10.4-1, so out of the box, this touchpad is not working anymore on the soon to be released Ubuntu 18.04.

I don’t think the users should have to fiddle around to get this very common touchpad working on the new Ubuntu version when it has been working flawlessly for years on the previous versions.
Comment 13 Peter Hutterer 2018-04-12 22:49:54 UTC
See comment #11, you have the hardware, we can't really debug this from here. If you had submitted the required hwdb entries instead of complaining, this problem would be fixed for all users of that hardware by now.
Comment 14 yahoe.001 2018-04-13 13:02:15 UTC
(In reply to Peter Hutterer from comment #13)
> See comment #11, you have the hardware, we can't really debug this from
> here. If you had submitted the required hwdb entries instead of complaining,
> this problem would be fixed for all users of that hardware by now.

I am not "complaining" and I think my remarks are valid one, so please please watch your language.
Comment #11 doesn’t give clear simple instructions just "has the information on what to do next".
I’ll will try to complete the procedure described in the given URL when time permits, soon.
Comment 15 stacktracer 2018-04-29 00:33:54 UTC
I have two Logitech Wireless Touchpads, and for the past few months they have both had what must be this same issue. It's sporadic -- if I do a bunch of finger swipes, it will miss maybe 1 out of 5.

I will try doing the pressure measurements, and post my results.
Comment 16 stacktracer 2018-04-29 17:23:06 UTC
For me the palm threshold needs to be set to at least 300. It probably makes sense to set it even higher (maybe 500?), since this is a desktop touchpad -- separate device, not built into a laptop surface -- so accidental palm contact practically never happens.

In a few minutes of regular usage, I've seen max pressures in the 70-260 range.

Still trying put together a .hwdb file. The debug procedure page is not very specific about how to figure out the right values for the match line, so it may take me a while to figure those out.

libinput version: 1.10.5-1
uname: Linux <hostname> 4.16.3-1-ARCH #1 SMP PREEMPT Thu Apr 19 09:17:56 UTC 2018 x86_64 GNU/Linux.)
Comment 17 stacktracer 2018-04-29 18:27:57 UTC
Hmm, no joy yet.

I increased the palm threshold, by putting the following in /etc/udev/hwdb.d/99-logitech-wireless-touchpad-palm.hwdb:

libinput:touchpad:input:b0003v046Dp4011*
 LIBINPUT_ATTR_PALM_PRESSURE_THRESHOLD=500

I did a full system reboot afterwards. Both "udevadm test" and "libinput measure touchpad-pressure" now report the palm threshold to be 500.

However, the mouse cursor still gets stuck, just like before.

"libinput measure touchpad-threshold" used to print "palm" at the end of the line when the cursor would get stuck. Now that the palm threshold is higher it no longer prints "palm" ... but the cursor still gets stuck just like before.

Bummer.
Comment 18 stacktracer 2018-04-29 18:47:16 UTC
Notably, the cursor still gets stuck when, and only when, "libinput measure" reports a max pressure above 130. It's very consistent. Maybe my 500 isn't taking effect after all.
Comment 19 stacktracer 2018-04-29 18:55:08 UTC
Indeed:

$ libinput debug-events --device /dev/input/event14 --verbose
event14 - Logitech Wireless Touchpad: is tagged by udev as: Touchpad
event14 - using pressure-based touch detection (5:6)
event14 - palm: pressure threshold is 130
event14 - Logitech Wireless Touchpad: device is a touchpad


... Not sure where to go next. I'll try the udevadm update steps again, but I'm not optimistic. Suggestions appreciated.
Comment 20 stacktracer 2018-04-29 20:13:07 UTC
I'm stuck. "udevadm test" shows "LIBINPUT_ATTR_PALM_PRESSURE_THRESHOLD=500", but "libinput debug-events" shows "palm: pressure threshold is 130".
Comment 21 Peter Hutterer 2018-04-30 00:39:47 UTC
This may be caused by a peculiar behaviour of udevadm test: it shows the properties to be applied but only applies them when being run as root. So make sure to run as root if you want it to apply the properties too. Check with udevadm info if the property shows up there? If so but libinput doesn't detect it, then that's a bug in libinput somewhere.
Comment 22 Peter Hutterer 2018-04-30 00:42:25 UTC
Created attachment 139224 [details] [review]
0001-util-allow-for-palm-pressure-255.patch

Sorry, posted to quickly. This one is the reason it doesn't work, an artificial upper limit.
Comment 23 Peter Hutterer 2018-04-30 05:53:54 UTC
commit 59eb10e593213403c301a5ce3fbd0a22b6e52efd
Author: Peter Hutterer <>
Date:   Mon Apr 30 10:40:45 2018 +1000

     util: allow for palm pressure > 255

so grabbing git master should work for running debug-events now
Comment 24 stacktracer 2018-04-30 11:54:57 UTC
Created attachment 139227 [details]
99-logitech-wireless-touchpad-palm.hwdb
Comment 25 stacktracer 2018-04-30 11:56:24 UTC
Hooray! Setting palm threshold to 255 does indeed make the touchpad usable. I attached my hwdb file.

I will also give git master a try.
Comment 26 stacktracer 2018-04-30 12:31:47 UTC
With git master everything works great, including palm threshold 500.

Thanks Peter!
Comment 27 Peter Hutterer 2018-04-30 23:51:36 UTC
I can push out 255 but since we fixed the artificial limit already (and I can easily cherry-pick that over to 1.10.x) how about we just set the final threshold. What is that one going to be? 255? 260? 300? 500?

Also, bonus points for submitting a git-formatted patch I can apply and push directly. Gets the credits right, including free fame and fortune and whatnot :)
Comment 28 stacktracer 2018-05-01 15:16:31 UTC
Created attachment 139249 [details]
0001-fix-spurious-palm-detections-for-Logitech-Wireless-T.patch

Patch attached. Going with palm threshold of 400.

Thanks again.
Comment 29 Peter Hutterer 2018-05-01 22:36:37 UTC
Thanks, pushed

commit a1ca02ec88ee2f98b913b42e0cf5e3446a579db5
Author: Mike Hogye <>
Date:   Tue May 1 11:14:41 2018 -0400

     Fix spurious palm detections for Logitech Wireless Touchpad


https://wayland.freedesktop.org/libinput/doc/latest/reporting_bugs.html#fixed_bugs
Comment 30 yahoe.001 2018-05-31 18:40:22 UTC
I can confirm that my Logitech wireless touchpad is once again working using libinput10 v1.10.7-1, without xserver-xorg-input-synaptics.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.