util: allow for palm pressure > 255

https://bugs.freedesktop.org/show_bug.cgi?id=105753

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
(cherry picked from commit 59eb10e593213403c301a5ce3fbd0a22b6e52efd)